万字纹分步展示

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
         <span class="mdc-button__ripple"></span>
         <span class="mdc-button__label" style="font-size: xxx-large">START</span>
     </button>
-    <img id="gestureImg" style="opacity: 0;width: 300px;position: absolute;z-index: -1" src="" alt=""/>
-    <video autoplay muted id="video" src="" style="display: none;width: 300px;position: absolute;z-index: 1"></video>
+    <div style="display: flex;flex-direction: column">
+        <video autoplay muted id="video" src="" style="display: none;width: 300px;"></video>
+        <img id="gestureImg" style="opacity: 0;width: 300px;display: none" src="" alt=""/>
+    </div>
 </div>
 
 
