--- a/index1.html
+++ b/index1.html
@@ -50,7 +50,7 @@ limitations under the License. -->
         <h1>final predict:<p id="final_output">none</p>
         </h1>
         <div style="position: relative;display: flex;flex-direction: row">
-            <video id="webcam" autoplay playsinline></video>
+            <video style="display: none" id="webcam" autoplay playsinline></video>
             <canvas class="output_canvas" id="output_canvas" width="1280" height="720"
                     style="position: absolute; left: 0; top: 0;"></canvas>
             <div style="display: flex;flex-direction: column">
