--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <video autoplay muted id="video" src="" style="display: none;width: 70vw;height: 70vh"></video>
         <img id="gestureImg" style="opacity: 0;width: 300px;display: none" src="" alt=""/>
     </div>
+    <audio id="sound" autoplay src=""></audio>
 </div>
 
 
