纹样介绍文本动效

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </button>
     <div style="display: flex;flex-direction: column;justify-content: center;align-items: center;width: 100%">
         <div style="display: flex;flex-direction: row;width: 100%">
-            <h1 id="gestureName"
+            <h1 id="gestureName" class="gestureInfo"
                 style="width: 5%;font-size: xxx-large;text-align: center;margin: 5%;height:fit-content;"></h1>
             <!--            <div style="display: flex;flex-direction: column;width: 16vw;margin-left: 2%;align-items: center;margin-top: 2%">-->
             <!--                -->
@@ -29,7 +29,7 @@
             <video autoplay muted id="video" src=""
                    style="display: none;width: 65vw;height: 65vh;margin-right: 2%"></video>
             <div style="display: flex;flex-direction: column-reverse;width: 15%;text-align: left;margin-top: 10%;margin-right: 5%;font-size: 20px">
-                <p id="gestureDetail" style="color: white;writing-mode: vertical-lr;"></p>
+                <p id="gestureDetail" style="color: white;writing-mode: vertical-lr;" class="gestureInfo"></p>
             </div>
 
         </div>
