--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         style="z-index: -2;position: absolute;pointer-events: none;width: 100%;display: none"></canvas>
 <div style="width: 100%;height:100vh;display: flex;align-items: center;flex-direction: column">
     <button id="webcamButton"
-            style="font-size: xxx-large;color: white;border: none;background-color: black;margin-top: 30%">START
+            style="font-size: xxx-large;color: white;border: none;background-color: black;margin-top: 30%;display: none">
+        START
     </button>
     <div style="display: flex;flex-direction: column;justify-content: center;align-items: center;width: 100vw">
         <div style="display: flex;flex-direction: row;width: 100%">
