--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <video autoplay muted id="video" src=""
                    style="display: none;width: 70vw;height: 70vh;"></video>
             <p id="gestureDetail"
-               style="color: white;writing-mode: vertical-lr;align-items: center;width: 15%;font-size: 22px;margin-top: 5%"
+               style="color: white;writing-mode: vertical-lr;width: 15%;font-size: 22px;margin-top: 5%;justify-content: center;display: flex;flex-direction: column"
                class="gestureInfo"></p>
         </div>
         <img id="gestureImg" style="opacity: 0;width: 250px;display: none" src="" alt=""/>
