--- a/index.html
+++ b/index.html
@@ -8,23 +8,28 @@
 <body>
 <canvas class="output_canvas" id="output_canvas" width="1920px" height="1080px"
         style="z-index: -2;position: absolute;pointer-events: none;width: 100%;display: none"></canvas>
-<div style="width: 100%;height:100vh;display: flex;align-items: center;flex-direction: column">
+<div style="width: 100vw;height:100vh;display: flex;align-items: center;flex-direction: column">
     <button id="webcamButton"
-            style="font-size: xxx-large;color: white;border: none;background-color: black;margin-top: 30%;display: none">
-        START
+            style="font-size: xxx-large;color: white;border: none;background-color: black;display: none">
+        LOADING
     </button>
-    <div style="display: flex;flex-direction: column;justify-content: center;align-items: center;width: 100vw">
-        <div style="display: flex;flex-direction: row;width: 100%">
+    <div id="content" style="display: none;flex-direction: column;align-items: center;width: 100vw;height: 100vh;">
+        <div style="display: flex;flex-direction: row;width: 100%;justify-content: space-between">
             <h1 id="gestureName" class="gestureInfo"
-                style="width: 5%;font-size: 60px;text-align: center;margin: 5%;height:fit-content;"></h1>
+                style="width: 5%;font-size: 60px;text-align: center;margin: 5%;height:fit-content;z-index: 1;position: relative"></h1>
             <video autoplay muted id="video" src=""
-                   style="display: none;width: 70vw;height: 70vh;"></video>
+                   style="display: none;width: 100vw;height: 100vh;z-index: -1;position: absolute"></video>
             <p id="gestureDetail"
-               style="color: white;writing-mode: vertical-lr;width: 15%;font-size: 22px;margin-top: 5%;justify-content: center;display: flex;flex-direction: column"
+               style="color: white;writing-mode: vertical-lr;width: 15%;font-size: 22px;margin-top: 5%;justify-content: center;display: flex;flex-direction: column;z-index: 1"
                class="gestureInfo"></p>
         </div>
-        <img id="gestureImg" style="opacity: 0;width: 250px;display: none" src="" alt=""/>
-        <p id="reminder" style="opacity: 0;color: white">请按提示做出手势</p>
+        <div style="position: fixed;bottom: 0;align-items: center;display: flex;flex-direction: column;z-index:1 ">
+            <img id="gestureImg" style="opacity: 0;width: 20%;display: none" src="" alt=""/>
+            <progress id="progress" style="opacity: 1"  max="100" value="0"></progress>
+            <p id="reminder" style="opacity: 0;color: white">请按提示做出手势</p>
+        </div>
+        <!--<img id="gestureImg" style="opacity: 0;width: 250px;display: none;" src="" alt=""/>
+        <p id="reminder" style="opacity: 0;color: white">请按提示做出手势</p>-->
     </div>
 
     <audio id="sound" autoplay src=""></audio>
@@ -37,8 +42,7 @@
         <!--            <span class="mdc-button__ripple"></span>-->
         <!--            <span class="mdc-button__label">START</span>-->
         <!--        </button>-->
-        <h1 style="display: none">final predict:<p id="final_output">none</p>
-        </h1>
+        <h1 style="display: none">final predict:<p id="final_output">none</p></h1>
         <div style="position: relative;flex-direction: row">
             <video style="display: none" id="webcam" autoplay playsinline></video>
             <!--            <canvas class="output_canvas" id="output_canvas" width="1280" height="720"-->
@@ -57,6 +61,7 @@
         margin: 0;
         padding: 0;
         overflow: hidden;
+        cursor: none;
     }
 
     body {
