--- a/content.html
+++ b/content.html
@@ -2,9 +2,87 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title> MediaPipe HandGestureRecognizer Task for web</title>
+    <link rel="stylesheet" href="style.css">
+    <meta http-equiv="Page-Enter" content="revealTrans(Duration=3,Transition=23)">
+
 </head>
 <body>
+<canvas class="output_canvas" id="output_canvas" width="1920px" height="1080px"
+        style="z-index: -2;position: absolute;pointer-events: none;width: 100%;display: none"></canvas>
+<div style="width: 100vw;height:100vh;display: flex;align-items: center;flex-direction: column">
+    <button id="webcamButton"
+            style="font-size: xxx-large;color: white;border: none;background-color: black;display: none">
+        LOADING
+    </button>
+    <div id="content" style="display: none;flex-direction: column;align-items: center;width: 100vw;height: 100vh;">
+        <div style="display: flex;flex-direction: row;width: 100%;justify-content: space-between">
+            <h1 id="gestureName" class="gestureInfo"
+                style="width: 5%;font-size: 60px;text-align: center;margin: 5%;height:fit-content;z-index: 1;position: relative;display: none"></h1>
+            <video autoplay muted id="video" src=""
+                   style="display: none;width: 100vw;height: 100vh;z-index: -1;position: absolute"></video>
+            <p id="gestureDetail"
+               style="color: white;writing-mode: vertical-lr;width: 15%;font-size: 22px;margin-top: 5%;justify-content: center;display: none;flex-direction: column;z-index: 1"
+               class="gestureInfo"></p>
+        </div>
+        <div style="position: fixed;bottom: 0;align-items: center;display: flex;flex-direction: column;z-index:1 ">
+            <img id="gestureImg" style="opacity: 0;width: 20%;display: none" src="" alt=""/>
+            <!--            <progress id="progress" style="opacity: 1"  max="100" value="0"></progress>-->
+            <div class="g-container" id="progress">
+                <div class="g-progress" id="progressValue"></div>
+            </div>
+            <p id="reminder" style="opacity: 0;color: white">请按提示做出手势</p>
+        </div>
+        <!--<img id="gestureImg" style="opacity: 0;width: 250px;display: none;" src="" alt=""/>
+        <p id="reminder" style="opacity: 0;color: white">请按提示做出手势</p>-->
+    </div>
+    <audio id="sound" autoplay src=""></audio>
+</div>
 
+
+<section id="demos" class="invisible" style="display: none">
+    <div id="liveView" class="videoView">
+        <!--        <button id="webcamButton" class="mdc-button mdc-button&#45;&#45;raised">-->
+        <!--            <span class="mdc-button__ripple"></span>-->
+        <!--            <span class="mdc-button__label">START</span>-->
+        <!--        </button>-->
+        <h1 style="display: none">final predict:<p id="final_output">none</p></h1>
+        <div style="position: relative;flex-direction: row">
+            <video style="display: none" id="webcam" autoplay playsinline></video>
+            <!--            <canvas class="output_canvas" id="output_canvas" width="1280" height="720"-->
+            <!--                    style="position: absolute; left: 0; top: 0;"></canvas>-->
+            <div style="display: none;flex-direction: column;left: 200px">
+                <p id='gesture_output1' class="output">
+                <p id='gesture_output2' class="output">
+            </div>
+        </div>
+    </div>
+</section>
+<!-- partial -->
+<script type="module" src="script1.js"></script>
+<style>
+    * {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        cursor: none;
+    }
+
+    body {
+        opacity: 0;
+        margin: 0;
+        padding: 0;
+        background-color: black;
+        transition: opacity 1s ease-in-out;
+    }
+
+    body.fade-in {
+        opacity: 1;
+        margin: 0;
+        padding: 0;
+        background-color: black;
+    }
+</style>
 </body>
+
 </html>
