新增四个动画，缺少手势示意图

--- a/content.html
+++ b/content.html
@@ -20,7 +20,7 @@
             <h1 id="gestureName" class="gestureInfo"
                 style="width: 5%;font-size: 60px;text-align: center;margin: 5%;height:fit-content;z-index: 1;position: relative;display: none"></h1>
             <video autoplay muted id="video" src=""
-                   style="display: none;width: 100vw;height: 100vh;z-index: -1;position: absolute"></video>
+                   style="display: none;width: 100vw;height: 100vh;z-index: -1;position: absolute;object-fit: cover"></video>
             <p id="gestureDetail"
                style="color: white;writing-mode: vertical-lr;width: 15%;font-size: 22px;margin-top: 5%;justify-content: center;display: none;flex-direction: column;z-index: 1"
                class="gestureInfo"></p>
