--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
     <audio id="sound" autoplay src=""></audio>
 </div>
 <div style="width: 100%;height: 100vh;display: flex;flex-direction: column;align-items: center;justify-content: center">
-    <div style="font-family: FZZJ-GFSTJW,serif;font-size: 60pt">纹样互动：几何手势</div>
-    <img src="./img/img.png" alt=""/>
-    <div style="font-family: FZZILSS-B--GB1-0,serif;text-align: center;margin-top: 3%;line-height: 28pt">
-        <div style="font-weight: bold;font-size: 25pt">互动说明：</div>
-        <div style="font-size: 18pt">看图模仿相应的手势，触发纹样展示与介绍</div>
-        <img style="width: 15%;margin-top: 10%" src="img/wan0.png" alt=""/>
-        <div style="font-size: 16pt">做出手势，开始互动</div>
-    </div>
-
+    <!--    <div style="font-family: FZZJ-GFSTJW,serif;font-size: 60pt">纹样互动：几何手势</div>-->
+    <!--    <img src="./img/wan1.png" alt=""/>-->
+    <!--    <div style="font-family: FZZILSS-B&#45;&#45;GB1-0,serif;text-align: center;margin-top: 3%;line-height: 28pt">-->
+    <!--        <div style="font-weight: bold;font-size: 25pt">互动说明：</div>-->
+    <!--        <div style="font-size: 18pt">看图模仿相应的手势，触发纹样展示与介绍</div>-->
+    <!--        <img style="width: 15%;margin-top: 10%" src="img/wan0.png" alt=""/>-->
+    <!--        <div style="font-size: 16pt">做出手势，开始互动</div>-->
+    <!--    </div>-->
+    <img style="width: 100vw;height: 100vh" src="img/startup1.png" alt=""/>
 </div>
 
 <section id="demos" class="invisible" style="display: none">
